# MoCoM_project

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ff.net.xml  ff_TSC_modified.net.xml  lane_output_base.xml  lane_output_modified.xml  notebook.ipynb  outputs_base.add.xml  outputs_modified.add.xml  pyproject.toml  requirements-dev.txt  requirements.txt  simu_base.sumocfg  simu_modified.sumocfg  summary_base.xml  summary_modified.xml  tripinfo_base.xml  tripinfo_modified.xml  utils.py
data/: .gitkeep
docs/: README.md
examples/: README.md  getting_started.py
src/: README.md  __init__.py
tests/: README.md  test_main.py
